move load map related functionality away from phase class and some changes around it