@@ -15,25 +15,26 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-/** ConquestFileReaderTest is a test class for the ConquestFileReader class */
-class ConquestFileReaderTest {
+/** MapFileReaderTest is a test class for the MapFileReader class */
+public class MapFileReaderTest {
     private String d_path;
     private Map d_map;
-    private ConquestFileReader d_conquestFileReader;
+    private MapFileReader d_mapFileReader;
 
     /** Sets up the initial configuration before the test starts */
     @BeforeEach
     void setUp() {
-        d_conquestFileReader = new ConquestFileReader();
-        d_path = "src/test/resources/conqueror_test.map";
+        d_mapFileReader = new MapFileReader();
+        d_path = "src/test/resources/germany_test.map";
         d_map = new Map();
     }
 
-    /** Tests readConquestFile method to load a map */
+    /** Tests readFile method to load a map */
     @Test
-    public void shouldLoadMapIntoJavaObjects() {
+    public void shouldLoadWarZoneMapIntoJavaObjects() {
 
-        d_conquestFileReader.readConquestFile(d_path, d_map);
+        d_path = "src/test/resources/germany_test.map";
+        d_mapFileReader.readFile(d_path, d_map);
 
         List<Continent> l_continents = d_map.getD_continents();
         List<Country> l_countries = d_map.getD_countries();
@@ -53,40 +54,34 @@ class ConquestFileReaderTest {
     /** Create expected objects for the test to assert */
     private void createObjectsToAssert(
             List<Continent> expectedContinents, List<Country> expectedCountries) {
-        Continent l_continent1 = new Continent(1, "Cockpit", 5);
-        Continent l_continent2 = new Continent(2, "Right Thruster", 6);
-        Continent l_continent3 = new Continent(3, "Left Cargo", 10);
+        Continent l_continent1 = new Continent(1, "Norddeutschland", 3);
+        Continent l_continent2 = new Continent(2, "Westdeutschland", 4);
 
-        Country l_country1 = new Country(1, "Cockpit01", l_continent1);
-        Country l_country2 = new Country(2, "Cockpit02", l_continent1);
-        Country l_country3 = new Country(3, "Territory04", l_continent3);
-        Country l_country4 = new Country(4, "Territory05", l_continent3);
-        Country l_country5 = new Country(5, "Territory06", l_continent3);
-        Country l_country6 = new Country(6, "Territory07", l_continent3);
+        Country l_country1 = new Country(1, "Ostfriesland", l_continent1);
+        Country l_country2 = new Country(2, "Schleswig", l_continent2);
+        Country l_country3 = new Country(3, "Holstein", l_continent1);
+        Country l_country4 = new Country(4, "Hamburg", l_continent2);
+        Country l_country5 = new Country(5, "Mecklenburger-Bucht", l_continent2);
 
-        l_country1.addNeighbors(Arrays.asList(2, 6));
-        l_country2.addNeighbors(Arrays.asList(1, 5));
-        l_country3.addNeighbors(List.of(4));
-        l_country4.addNeighbors(Arrays.asList(6, 5, 3));
-        l_country5.addNeighbors(Arrays.asList(2, 4));
-        l_country6.addNeighbors(Arrays.asList(5, 1));
+        l_country1.addNeighbors(Arrays.asList(2, 3));
+        l_country2.addNeighbors(Arrays.asList(1, 3, 5));
+        l_country3.addNeighbors(Arrays.asList(1, 2, 4));
+        l_country4.addNeighbors(List.of(3));
+        l_country5.addNeighbors(Arrays.asList(2, 3));
 
         l_continent1.addCountryId(1);
-        l_continent1.addCountryId(2);
-        l_continent3.addCountryId(3);
-        l_continent3.addCountryId(4);
-        l_continent3.addCountryId(5);
-        l_continent3.addCountryId(6);
+        l_continent1.addCountryId(3);
+        l_continent2.addCountryId(2);
+        l_continent2.addCountryId(4);
+        l_continent2.addCountryId(5);
 
         expectedContinents.add(l_continent1);
         expectedContinents.add(l_continent2);
-        expectedContinents.add(l_continent3);
 
         expectedCountries.add(l_country1);
         expectedCountries.add(l_country2);
         expectedCountries.add(l_country3);
         expectedCountries.add(l_country4);
         expectedCountries.add(l_country5);
-        expectedCountries.add(l_country6);
     }
 }
